install_data(
    'AccelerationFunction.v1_0_5.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AccelerationFunction',
)
install_data(
    'AccelerationFunctionCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AccelerationFunctionCollection',
)
install_data(
    'AccountService.v1_15_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AccountService',
)
install_data(
    'ActionInfo.v1_4_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ActionInfo',
)
install_data(
    'AddressPool.v1_3_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AddressPool',
)
install_data(
    'AddressPoolCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AddressPoolCollection',
)
install_data(
    'Aggregate.v1_0_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Aggregate',
)
install_data(
    'AggregateCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AggregateCollection',
)
install_data(
    'AggregationService.v1_0_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AggregationService',
)
install_data(
    'AggregationSource.v1_4_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AggregationSource',
)
install_data(
    'AggregationSourceCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AggregationSourceCollection',
)
install_data(
    'AllowDeny.v1_0_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AllowDeny',
)
install_data(
    'AllowDenyCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AllowDenyCollection',
)
install_data(
    'Application.v1_0_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Application',
)
install_data(
    'ApplicationCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ApplicationCollection',
)
install_data(
    'Assembly.v1_5_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Assembly',
)
install_data(
    'AttributeRegistry.v1_3_9.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/AttributeRegistry',
)
install_data(
    'Battery.v1_3_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Battery',
)
install_data(
    'BatteryCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/BatteryCollection',
)
install_data(
    'BatteryMetrics.v1_0_4.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/BatteryMetrics',
)
install_data(
    'Bios.v1_2_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Bios',
)
install_data(
    'BootOption.v1_0_6.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/BootOption',
)
install_data(
    'BootOptionCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/BootOptionCollection',
)
install_data(
    'Cable.v1_2_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Cable',
)
install_data(
    'CableCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CableCollection',
)
install_data(
    'Certificate.v1_8_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Certificate',
)
install_data(
    'CertificateCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CertificateCollection',
)
install_data(
    'CertificateLocations.v1_0_4.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CertificateLocations',
)
install_data(
    'CertificateService.v1_0_5.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CertificateService',
)
install_data(
    'Chassis.v1_25_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Chassis',
)
install_data(
    'ChassisCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ChassisCollection',
)
install_data(
    'Circuit.v1_8_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Circuit',
)
install_data(
    'CircuitCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CircuitCollection',
)
install_data(
    'CollectionCapabilities.v1_4_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CollectionCapabilities',
)
install_data(
    'ComponentIntegrity.v1_2_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ComponentIntegrity',
)
install_data(
    'ComponentIntegrityCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ComponentIntegrityCollection',
)
install_data(
    'CompositionReservation.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CompositionReservation',
)
install_data(
    'CompositionReservationCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CompositionReservationCollection',
)
install_data(
    'CompositionService.v1_2_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CompositionService',
)
install_data(
    'ComputerSystem.v1_22_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ComputerSystem',
)
install_data(
    'ComputerSystemCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ComputerSystemCollection',
)
install_data(
    'Connection.v1_3_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Connection',
)
install_data(
    'ConnectionCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ConnectionCollection',
)
install_data(
    'ConnectionMethod.v1_1_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ConnectionMethod',
)
install_data(
    'ConnectionMethodCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ConnectionMethodCollection',
)
install_data(
    'Container.v1_0_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Container',
)
install_data(
    'ContainerCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ContainerCollection',
)
install_data(
    'ContainerImage.v1_0_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ContainerImage',
)
install_data(
    'ContainerImageCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ContainerImageCollection',
)
install_data(
    'Control.v1_5_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Control',
)
install_data(
    'ControlCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ControlCollection',
)
install_data(
    'CoolantConnector.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CoolantConnector',
)
install_data(
    'CoolantConnectorCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CoolantConnectorCollection',
)
install_data(
    'CoolingLoop.v1_0_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CoolingLoop',
)
install_data(
    'CoolingLoopCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CoolingLoopCollection',
)
install_data(
    'CoolingUnit.v1_1_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CoolingUnit',
)
install_data(
    'CoolingUnitCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CoolingUnitCollection',
)
install_data(
    'CXLLogicalDevice.v1_2_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CXLLogicalDevice',
)
install_data(
    'CXLLogicalDeviceCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/CXLLogicalDeviceCollection',
)
install_data(
    'Drive.v1_19_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Drive',
)
install_data(
    'DriveCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/DriveCollection',
)
install_data(
    'DriveMetrics.v1_2_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/DriveMetrics',
)
install_data(
    'Endpoint.v1_8_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Endpoint',
)
install_data(
    'EndpointCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/EndpointCollection',
)
install_data(
    'EndpointGroup.v1_3_4.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/EndpointGroup',
)
install_data(
    'EndpointGroupCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/EndpointGroupCollection',
)
install_data(
    'EnvironmentMetrics.v1_3_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/EnvironmentMetrics',
)
install_data(
    'EthernetInterface.v1_12_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/EthernetInterface',
)
install_data(
    'EthernetInterfaceCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/EthernetInterfaceCollection',
)
install_data(
    'Event.v1_10_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Event',
)
install_data(
    'EventDestination.v1_14_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/EventDestination',
)
install_data(
    'EventDestinationCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/EventDestinationCollection',
)
install_data(
    'EventService.v1_10_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/EventService',
)
install_data(
    'ExternalAccountProvider.v1_7_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ExternalAccountProvider',
)
install_data(
    'ExternalAccountProviderCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ExternalAccountProviderCollection',
)
install_data(
    'Fabric.v1_3_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Fabric',
)
install_data(
    'FabricAdapter.v1_5_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/FabricAdapter',
)
install_data(
    'FabricAdapterCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/FabricAdapterCollection',
)
install_data(
    'FabricCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/FabricCollection',
)
install_data(
    'Facility.v1_4_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Facility',
)
install_data(
    'FacilityCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/FacilityCollection',
)
install_data(
    'Fan.v1_5_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Fan',
)
install_data(
    'FanCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/FanCollection',
)
install_data(
    'Filter.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Filter',
)
install_data(
    'FilterCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/FilterCollection',
)
install_data(
    'GraphicsController.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/GraphicsController',
)
install_data(
    'GraphicsControllerCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/GraphicsControllerCollection',
)
install_data(
    'Heater.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Heater',
)
install_data(
    'HeaterCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/HeaterCollection',
)
install_data(
    'HeaterMetrics.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/HeaterMetrics',
)
install_data(
    'HostInterface.v1_3_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/HostInterface',
)
install_data(
    'HostInterfaceCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/HostInterfaceCollection',
)
install_data(
    'info.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/info',
)
install_data(
    'IPAddresses.v1_1_5.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/IPAddresses',
)
install_data(
    'Job.v1_2_4.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Job',
)
install_data(
    'JobCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/JobCollection',
)
install_data(
    'JobService.v1_0_6.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/JobService',
)
install_data(
    'JsonSchemaFile.v1_1_5.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/JsonSchemaFile',
)
install_data(
    'JsonSchemaFileCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/JsonSchemaFileCollection',
)
install_data(
    'Key.v1_4_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Key',
)
install_data(
    'KeyCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/KeyCollection',
)
install_data(
    'KeyPolicy.v1_0_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/KeyPolicy',
)
install_data(
    'KeyPolicyCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/KeyPolicyCollection',
)
install_data(
    'KeyService.v1_0_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/KeyService',
)
install_data(
    'LeakDetection.v1_0_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/LeakDetection',
)
install_data(
    'LeakDetector.v1_1_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/LeakDetector',
)
install_data(
    'LeakDetectorCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/LeakDetectorCollection',
)
install_data(
    'License.v1_1_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/License',
)
install_data(
    'LicenseCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/LicenseCollection',
)
install_data(
    'LicenseService.v1_1_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/LicenseService',
)
install_data(
    'LogEntry.v1_16_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/LogEntry',
)
install_data(
    'LogEntryCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/LogEntryCollection',
)
install_data(
    'LogService.v1_7_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/LogService',
)
install_data(
    'LogServiceCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/LogServiceCollection',
)
install_data(
    'Manager.v1_19_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Manager',
)
install_data(
    'ManagerAccount.v1_12_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ManagerAccount',
)
install_data(
    'ManagerAccountCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ManagerAccountCollection',
)
install_data(
    'ManagerCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ManagerCollection',
)
install_data(
    'ManagerDiagnosticData.v1_2_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ManagerDiagnosticData',
)
install_data(
    'ManagerNetworkProtocol.v1_10_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ManagerNetworkProtocol',
)
install_data(
    'Manifest.v1_1_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Manifest',
)
install_data(
    'MediaController.v1_3_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MediaController',
)
install_data(
    'MediaControllerCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MediaControllerCollection',
)
install_data(
    'Memory.v1_20_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Memory',
)
install_data(
    'MemoryChunks.v1_6_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MemoryChunks',
)
install_data(
    'MemoryChunksCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MemoryChunksCollection',
)
install_data(
    'MemoryCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MemoryCollection',
)
install_data(
    'MemoryDomain.v1_5_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MemoryDomain',
)
install_data(
    'MemoryDomainCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MemoryDomainCollection',
)
install_data(
    'MemoryMetrics.v1_7_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MemoryMetrics',
)
install_data(
    'MemoryRegion.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MemoryRegion',
)
install_data(
    'MemoryRegionCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MemoryRegionCollection',
)
install_data(
    'Message.v1_2_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Message',
)
install_data(
    'MessageRegistry.v1_6_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MessageRegistry',
)
install_data(
    'MessageRegistryCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MessageRegistryCollection',
)
install_data(
    'MessageRegistryFile.v1_1_5.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MessageRegistryFile',
)
install_data(
    'MessageRegistryFileCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MessageRegistryFileCollection',
)
install_data(
    'MetricDefinition.v1_3_4.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MetricDefinition',
)
install_data(
    'MetricDefinitionCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MetricDefinitionCollection',
)
install_data(
    'MetricReport.v1_5_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MetricReport',
)
install_data(
    'MetricReportCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MetricReportCollection',
)
install_data(
    'MetricReportDefinition.v1_4_6.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MetricReportDefinition',
)
install_data(
    'MetricReportDefinitionCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/MetricReportDefinitionCollection',
)
install_data(
    'NetworkAdapter.v1_11_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/NetworkAdapter',
)
install_data(
    'NetworkAdapterCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/NetworkAdapterCollection',
)
install_data(
    'NetworkAdapterMetrics.v1_1_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/NetworkAdapterMetrics',
)
install_data(
    'NetworkDeviceFunction.v1_9_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/NetworkDeviceFunction',
)
install_data(
    'NetworkDeviceFunctionCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/NetworkDeviceFunctionCollection',
)
install_data(
    'NetworkDeviceFunctionMetrics.v1_2_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/NetworkDeviceFunctionMetrics',
)
install_data(
    'NetworkInterface.v1_2_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/NetworkInterface',
)
install_data(
    'NetworkInterfaceCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/NetworkInterfaceCollection',
)
install_data(
    'NetworkPort.v1_4_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/NetworkPort',
)
install_data(
    'NetworkPortCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/NetworkPortCollection',
)
install_data(
    'odata.v4_0_5.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/odata',
)
install_data(
    'odata-v4.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/odata-v4',
)
install_data(
    'OperatingConfig.v1_0_4.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/OperatingConfig',
)
install_data(
    'OperatingConfigCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/OperatingConfigCollection',
)
install_data(
    'OperatingSystem.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/OperatingSystem',
)
install_data(
    'OutboundConnection.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/OutboundConnection',
)
install_data(
    'OutboundConnectionCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/OutboundConnectionCollection',
)
install_data(
    'Outlet.v1_4_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Outlet',
)
install_data(
    'OutletCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/OutletCollection',
)
install_data(
    'OutletGroup.v1_2_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/OutletGroup',
)
install_data(
    'OutletGroupCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/OutletGroupCollection',
)
install_data(
    'PCIeDevice.v1_14_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PCIeDevice',
)
install_data(
    'PCIeDeviceCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PCIeDeviceCollection',
)
install_data(
    'PCIeFunction.v1_6_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PCIeFunction',
)
install_data(
    'PCIeFunctionCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PCIeFunctionCollection',
)
install_data(
    'PCIeSlots.v1_6_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PCIeSlots',
)
install_data(
    'PhysicalContext.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PhysicalContext',
)
install_data(
    'Port.v1_12_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Port',
)
install_data(
    'PortCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PortCollection',
)
install_data(
    'PortMetrics.v1_6_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PortMetrics',
)
install_data(
    'Power.v1_7_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Power',
)
install_data(
    'PowerDistribution.v1_4_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PowerDistribution',
)
install_data(
    'PowerDistributionCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PowerDistributionCollection',
)
install_data(
    'PowerDistributionMetrics.v1_3_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PowerDistributionMetrics',
)
install_data(
    'PowerDomain.v1_2_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PowerDomain',
)
install_data(
    'PowerDomainCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PowerDomainCollection',
)
install_data(
    'PowerEquipment.v1_2_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PowerEquipment',
)
install_data(
    'PowerSubsystem.v1_1_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PowerSubsystem',
)
install_data(
    'PowerSupply.v1_6_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PowerSupply',
)
install_data(
    'PowerSupplyCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PowerSupplyCollection',
)
install_data(
    'PowerSupplyMetrics.v1_1_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PowerSupplyMetrics',
)
install_data(
    'PrivilegeRegistry.v1_1_5.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PrivilegeRegistry',
)
install_data(
    'Privileges.v1_0_6.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Privileges',
)
install_data(
    'Processor.v1_20_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Processor',
)
install_data(
    'ProcessorCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ProcessorCollection',
)
install_data(
    'ProcessorMetrics.v1_6_4.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ProcessorMetrics',
)
install_data(
    'Protocol.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Protocol',
)
install_data(
    'Pump.v1_1_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Pump',
)
install_data(
    'PumpCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/PumpCollection',
)
install_data(
    'redfish-error.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/redfish-error',
)
install_data(
    'redfish-payload-annotations.v1_2_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/redfish-payload-annotations',
)
install_data(
    'redfish-payload-annotations-v1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/redfish-payload-annotations-v1',
)
install_data(
    'redfish-schema.v1_10_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/redfish-schema',
)
install_data(
    'redfish-schema-v1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/redfish-schema-v1',
)
install_data(
    'Redundancy.v1_4_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Redundancy',
)
install_data(
    'RegisteredClient.v1_1_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/RegisteredClient',
)
install_data(
    'RegisteredClientCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/RegisteredClientCollection',
)
install_data(
    'Reservoir.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Reservoir',
)
install_data(
    'ReservoirCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ReservoirCollection',
)
install_data(
    'ResolutionStep.v1_0_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ResolutionStep',
)
install_data(
    'Resource.v1_19_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Resource',
)
install_data(
    'ResourceBlock.v1_4_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ResourceBlock',
)
install_data(
    'ResourceBlockCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ResourceBlockCollection',
)
install_data(
    'Role.v1_3_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Role',
)
install_data(
    'RoleCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/RoleCollection',
)
install_data(
    'RouteEntry.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/RouteEntry',
)
install_data(
    'RouteEntryCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/RouteEntryCollection',
)
install_data(
    'RouteSetEntry.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/RouteSetEntry',
)
install_data(
    'RouteSetEntryCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/RouteSetEntryCollection',
)
install_data(
    'Schedule.v1_2_5.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Schedule',
)
install_data(
    'SecureBoot.v1_1_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SecureBoot',
)
install_data(
    'SecureBootDatabase.v1_0_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SecureBootDatabase',
)
install_data(
    'SecureBootDatabaseCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SecureBootDatabaseCollection',
)
install_data(
    'SecurityPolicy.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SecurityPolicy',
)
install_data(
    'Sensor.v1_9_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Sensor',
)
install_data(
    'SensorCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SensorCollection',
)
install_data(
    'SerialInterface.v1_2_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SerialInterface',
)
install_data(
    'SerialInterfaceCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SerialInterfaceCollection',
)
install_data(
    'ServiceConditions.v1_0_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ServiceConditions',
)
install_data(
    'ServiceRoot.v1_17_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ServiceRoot',
)
install_data(
    'Session.v1_7_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Session',
)
install_data(
    'SessionCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SessionCollection',
)
install_data(
    'SessionService.v1_1_9.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SessionService',
)
install_data(
    'Settings.v1_4_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Settings',
)
install_data(
    'Signature.v1_0_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Signature',
)
install_data(
    'SignatureCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SignatureCollection',
)
install_data(
    'SimpleStorage.v1_3_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SimpleStorage',
)
install_data(
    'SimpleStorageCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SimpleStorageCollection',
)
install_data(
    'SoftwareInventory.v1_10_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SoftwareInventory',
)
install_data(
    'SoftwareInventoryCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SoftwareInventoryCollection',
)
install_data(
    'Storage.v1_16_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Storage',
)
install_data(
    'StorageCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/StorageCollection',
)
install_data(
    'StorageController.v1_7_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/StorageController',
)
install_data(
    'StorageControllerCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/StorageControllerCollection',
)
install_data(
    'StorageControllerMetrics.v1_0_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/StorageControllerMetrics',
)
install_data(
    'Switch.v1_9_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Switch',
)
install_data(
    'SwitchCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SwitchCollection',
)
install_data(
    'SwitchMetrics.v1_0_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/SwitchMetrics',
)
install_data(
    'Task.v1_7_4.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Task',
)
install_data(
    'TaskCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/TaskCollection',
)
install_data(
    'TaskService.v1_2_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/TaskService',
)
install_data(
    'TelemetryService.v1_3_4.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/TelemetryService',
)
install_data(
    'Thermal.v1_7_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Thermal',
)
install_data(
    'ThermalEquipment.v1_1_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ThermalEquipment',
)
install_data(
    'ThermalMetrics.v1_3_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ThermalMetrics',
)
install_data(
    'ThermalSubsystem.v1_3_2.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ThermalSubsystem',
)
install_data(
    'Triggers.v1_4_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Triggers',
)
install_data(
    'TriggersCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/TriggersCollection',
)
install_data(
    'TrustedComponent.v1_3_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/TrustedComponent',
)
install_data(
    'TrustedComponentCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/TrustedComponentCollection',
)
install_data(
    'UpdateService.v1_14_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/UpdateService',
)
install_data(
    'USBController.v1_0_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/USBController',
)
install_data(
    'USBControllerCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/USBControllerCollection',
)
install_data(
    'VCATEntry.v1_0_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/VCATEntry',
)
install_data(
    'VCATEntryCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/VCATEntryCollection',
)
install_data(
    'VirtualMedia.v1_6_4.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/VirtualMedia',
)
install_data(
    'VirtualMediaCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/VirtualMediaCollection',
)
install_data(
    'VLanNetworkInterface.v1_3_1.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/VLanNetworkInterface',
)
install_data(
    'VLanNetworkInterfaceCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/VLanNetworkInterfaceCollection',
)
install_data(
    'Volume.v1_10_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Volume',
)
install_data(
    'VolumeCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/VolumeCollection',
)
install_data(
    'Zone.v1_6_3.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/Zone',
)
install_data(
    'ZoneCollection.json',
    install_dir: 'share/www/redfish/v1/JsonSchema/ZoneCollection',
)
