install_data(
    'csdl/NvidiaProcessor_v1.xml',
    install_dir: 'share/www/redfish/v1/schema',
    follow_symlinks: true,
)

install_data(
    'json-schema/NvidiaProcessor.json',
    'json-schema/NvidiaProcessor.v1_0_0.json',
    install_dir: 'share/www/redfish/v1/JsonSchemas',
    follow_symlinks: true,
)
